aws/manual/manual_security_group/main.tf
data "aws_vpc" "vpc_data" {
    filter {
    name   = "tag:default"
    values = ["vpc"]  #${var.vpc_tag_name}
  }
}
resource "aws_security_group" "main_security_group_custom" {
  name   = "sg_${var.name}_custom"
  vpc_id = data.aws_vpc.vpc_data.id
  description = var.sg_allow_ssh ? "opened port  ${var.sg_ssh_custom_port}, ${join(", ", var.sg_ingress)}" : "opened port ${join(", ", var.sg_ingress)}"

  dynamic "ingress" {
    for_each = var.sg_ingress
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  dynamic "ingress" {
    for_each = var.sg_allow_ssh ? [1] : []
    content {
      from_port   = var.sg_ssh_custom_port
      to_port     = var.sg_ssh_custom_port
      protocol    = "tcp"
      cidr_blocks = ["${var.sg_allow_ssh_subnet}"]
    }
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "sg-${var.name}-custom"
    environment = "${var.name}"
  }
}
resource "aws_security_group" "main_security_group" {
  count = var.sg_basic_rules ? 1 : 0
  name   = "sg_http_https"
  vpc_id = data.aws_vpc.vpc_data.id
  description = "opened 80 , 443"

  ingress {
    protocol  = "tcp"
    from_port = 80
    to_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
   ingress {
    protocol  = "tcp"
    from_port = 443
    to_port   = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "sg-${var.name}-http_https"
    environment = "${var.name}"
  }
}
